# network-usage-monitor

./: README.md  pyproject.toml
network_mon/: network_usage_by_nic.py  network_usage_by_process.py  network_usage_total.py  utils.py
tests/: test_network_mon.py
